copyparty/web/browser.css
/* ... */
#path {
	color: var(--fg);
	text-shadow: 1px 1px 0 var(--bg-max);
	font-weight: normal;
	display: inline-block;
	padding: .35em .5em .2em .5em;
	margin: 1.3em 0 -.2em 0;
	font-size: 1.4em;
}
html.y #path {
	text-shadow: none;
}
#path #entree {
	margin-left: -.7em;
}
#files {
	z-index: 1;
	top: -.3em;
	border-spacing: 0;
	position: relative;
}
#files tbody a {
	display: block;
	padding: .5em 0;
	margin: -.3em 0;
	scroll-margin-top: 45vh;
}
#files tr {
	scroll-margin-top: 25vh;
	scroll-margin-bottom: 20vh;
}
#files tbody div a {
	color: var(--tab-alt);
}
a, #files tbody div a:last-child {
	color: var(--a);
	padding: .2em;
	text-decoration: none;
}
a:hover {
	color: var(--a-hil);
	background: var(--a-h-bg);
}
#files a:hover {
	color: var(--fg-max);
	background: var(--bg-d3);
	text-decoration: underline;
}
#files thead th {
	position: sticky;
	top: -1px;
}
#files thead a {
	color: var(--f-gray);
	font-weight: normal;
}
.s0:after,
.s1:after {
	content: '⌄';
	margin-left: -.1em;
}
.s0r:after,
.s1r:after {
	content: '⌃';
	margin-left: -.1em;
}
.s0:after,
.s0r:after {
	color: var(--sort-1);
}
.s1:after,
.s1r:after {
	color: var(--sort-2);
}
#files thead th:after {
	margin-right: -.7em;
}
#files tbody tr:hover td,
#files tbody tr:hover td+td {
	background: var(--bg-d1);
	box-shadow: 0 1px 0 var(--bg-u5) inset, 0 -1px 0 var(--bg-u5) inset;
}
#files thead th {
	padding: .3em;
	background: var(--bg);
	border-bottom: 1px solid var(--f-h-b1);
	cursor: pointer;
}
html.y #files thead th {
	box-shadow: 0 1px 0 rgba(0,0,0,0.12);
}
#files td {
	margin: 0;
	padding: .3em .5em;
	background: var(--bg);
}
#files tr:nth-child(2n) td {
	background: var(--row-alt);
}
#files td+td+td {
	max-width: 30em;
	overflow: hidden;
}
#files td+td {
	box-shadow: 1px 0 0 0 rgba(128,128,128,var(--f-sh1)) inset, 0 1px 0 rgba(255,255,255,var(--f-sh2)) inset, 0 -1px 0 rgba(255,255,255,var(--f-sh2)) inset;
}
#files tr:nth-child(2n+1) td+td {
	box-shadow: 1px 0 0 0 rgba(128,128,128,var(--f-sh1)) inset, 0 1px 0 rgba(0,0,0,var(--f-sh3)) inset, 0 -1px 0 rgba(0,0,0,var(--f-sh3)) inset;
}
#files td:first-child {
	border-radius: .25em 0 0 .25em;
	white-space: nowrap;
}
#files td:last-child {
	border-radius: 0 .25em .25em 0;
}
#files tbody td:nth-child(3) {
	font-family: 'scp', monospace, monospace;
	text-align: right;
	padding-right: 1em;
	white-space: nowrap;
}
#files tbody td:first-child {
	color: var(--f-gray);
	text-align: center;
}
#files tbody tr td:last-child {
	white-space: nowrap;
}
#files thead th[style] {
	width: auto !important;
}
#files .srch_hdr a {
	display: inline;
}
#path a {
	padding: 0 .35em;
	position: relative;
	z-index: 1;
	/* ie: */
	border-bottom: .1em solid #777\9;
	margin-right: 1em\9;
}
#path a:first-child {
	padding-left: .8em;
}
#path i {
	width: 1.05em;
	height: 1.05em;
	margin: -.5em .15em -.15em -.7em;
	display: inline-block;
	border: 1px solid rgba(255,224,192,0.3);
	border-width: .05em .05em 0 0;
	transform: rotate(45deg);
	background: linear-gradient(45deg, rgba(0,0,0,0) 40%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0.35));
}
html.y #path i {
	background: none;
	border-color: rgba(0,0,0,0.2);
	border-width: .1em .1em 0 0;
}
#path a:hover {
	color: var(--fg-max);
	background: linear-gradient(90deg, rgba(0,0,0,0), rgba(0,0,0,0.2), rgba(0,0,0,0));
}
html.y #path a:hover {
	background: none;
}
.logue {
	padding: .2em 0;
}
.logue.hidden,
.logue:empty {
	display: none;
}
#doc>iframe,
.logue>iframe {
	background: var(--bgg);
	border: 1px solid var(--bgg);
	border-width: 0 .3em 0 .3em;
	border-radius: .5em;
	visibility: hidden;
	margin: 0 -.3em;
	width: 100%;
	height: 0;
}
#doc>iframe.focus,
.logue>iframe.focus {
	box-shadow: 0 0 .1em .1em var(--a);
}
#pro.logue>iframe {
	height: 100vh;
}
#pro.logue {
	margin-bottom: .8em;
}
#epi.logue {
	margin: .8em 0;
}
#epi.logue.mdo:before {
	content: 'README.md';
	text-align: center;
	display: block;
	margin-top: -1.5em;
}
#epi.logue.mdo {
	border-top: 1px solid var(--bg-u5);
	margin-top: 2.5em;
}
.mdo>h1:first-child,
.mdo>h2:first-child,
.mdo>h3:first-child {
	margin-top: 1.5rem;
}
.mdo {
	max-width: 52em;
}
.mdo.sb,
#epi.logue.mdo>iframe {
	max-width: 54em;
}
.mdo,
.mdo * {
	line-height: 1.4em;
}
#srv_info,
#srv_info2,
#acc_info {
	color: var(--srv-2);
	background: var(--bg);
	white-space: nowrap;
}
#srv_info,
#acc_info {
	position: absolute;
	font-size: .8em;
	top: .5em;
}
#srv_info {
	left: 2em;
	padding-right: .5em;
}
#acc_info,
#srv_info span,
#srv_info2 span {
	color: var(--srv-1);
}
#srv_info2 {
	display: none;
}
#acc_info {
	right: 2em;
}
#acc_info > span:not([id]) {
	color: var(--srv-1);
	margin-right: .6em;
}
#acc_info span.warn {
	color: var(--srv-3);
	border-bottom: 1px solid var(--srv-3b);
}
#goh+span {
	color: var(--bg-u5);
	padding-left: .5em;
	margin-left: .5em;
	border-left: .2em solid var(--bg-u5);
}
#repl {
	padding: .33em;
}
#files a.doc {
	color: var(--a-gray);
}
#files a.doc.bri {
	color: var(--tab-alt);
}
#files a.play {
	color: var(--a-dark);
	padding: .3em;
	margin: -.3em;
}
#files tbody tr.play td,
#files tbody tr.play td+td,
#files tbody tr.play div a {
	background: #fc0;
	background: var(--f-play-bg);
	color: var(--f-play-fg);
	text-shadow: none;
}
#files tbody tr.play a {
	color: inherit;
}
#files tbody tr.play a:hover {
	color: var(--btn-1h-fg);
	background: var(--btn-1h-bg);
}
#ggrid {
	margin: -.2em -.5em;
}
#ggrid>a>span {
	overflow: hidden;
	display: block;
	display: -webkit-box;
	-webkit-line-clamp: var(--grid-ln);
	-webkit-box-orient: vertical;
	padding-top: .3em;
}
#ggrid>a {
	display: inline-block;
	width: 10em;
	width: var(--grid-sz);
	vertical-align: top;
	overflow-wrap: break-word;
	border-radius: .3em;
	padding: .3em;
	margin: .5em;
	color: var(--g-fg);
	background: var(--g-bg);
	border: 1px solid var(--g-b1);
	border-top: 1px solid var(--g-b2);
	box-shadow: 0 .1em .3em var(--g-sh);
}
#ggrid>a:focus,
#ggrid>a:hover {
	color: var(--g-f-fg);
	background: var(--g-f-bg);
	border-color: var(--g-f-b1);
	box-shadow: 0 .1em .3em var(--g-sh);
}
/* ... */

